{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 11,
  "lineage": "76e8db44-2c08-8b16-a9ff-491664667cd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spark_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:eu-west-1::instance/i-aadfd97ebfb3d2715",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-aadfd97ebfb3d2715",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "spark-key-pair",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-8ce34d07",
            "private_dns": "ip-10-241-38-66.eu-west-1.compute.internal",
            "private_ip": "10.241.38.66",
            "public_dns": "ec2-54-214-201-232.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.214.201.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-3a20488a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "spark_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a37138c",
            "tags": {
              "Name": "spark-master"
            },
            "tags_all": {
              "Environment": "Local",
              "Name": "spark-master",
              "Service": "LocalStack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-883c6d2db17b06abd"
            ]
          },
          "dependencies": [
            "aws_key_pair.spark_key_pair",
            "aws_security_group.spark_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spark_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:eu-west-1::instance/i-d4873fd25f13e1980",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-d4873fd25f13e1980",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "spark-key-pair",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-e40c3668",
            "private_dns": "ip-10-196-169-114.eu-west-1.compute.internal",
            "private_ip": "10.196.169.114",
            "public_dns": "ec2-54-214-127-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.214.127.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-6be1170e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "spark_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a37138c",
            "tags": {
              "Name": "spark-worker-0"
            },
            "tags_all": {
              "Environment": "Local",
              "Name": "spark-worker-0",
              "Service": "LocalStack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-883c6d2db17b06abd"
            ]
          },
          "dependencies": [
            "aws_key_pair.spark_key_pair",
            "aws_security_group.spark_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:eu-west-1::instance/i-04d1e875749028f4c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04d1e875749028f4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "spark-key-pair",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-b1d64514",
            "private_dns": "ip-10-248-238-227.eu-west-1.compute.internal",
            "private_ip": "10.248.238.227",
            "public_dns": "ec2-54-214-31-63.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.214.31.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-75804e33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "spark_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7a37138c",
            "tags": {
              "Name": "spark-worker-1"
            },
            "tags_all": {
              "Environment": "Local",
              "Name": "spark-worker-1",
              "Service": "LocalStack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-883c6d2db17b06abd"
            ]
          },
          "dependencies": [
            "aws_key_pair.spark_key_pair",
            "aws_security_group.spark_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:security-group/sg-c7350d9c0f74f3588",
            "description": "Security group for MongoDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-c7350d9c0f74f3588",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb_sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "Local",
              "Service": "LocalStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-ce5a86b2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spark_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:security-group/sg-883c6d2db17b06abd",
            "description": "Security group for Apache Spark",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-883c6d2db17b06abd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "spark_sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "Local",
              "Service": "LocalStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-ce5a86b2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}